Resized footer and fixed navbar items alignment

--- a/App/static/style.css
+++ b/App/static/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   margin-left: 0;
   margin-right: 0;
-  height: 120px;
+  height: 90px;
 }
 
 #social-wrapper {
@@ -37,7 +37,7 @@
   position: relative;
   height: 60px;
   padding: 5px;
-  margin-left: 10px;
+  margin-right: 15px;
 }
 
 #user-nav-profile > img {
